tests/golden/error/no_hints_suppression.tg
// Golden test: --no-hints suppresses diagnostic hints (ADR 21.4.26h)
fn main() -> Nat {
    42 + "hello"
}
